<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="250dp"
    tools:context="com.corewarmobile.corewarmobile.MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="143dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:onClick="NewWarrior"
        android:text="@string/new_warrior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/button6"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="23dp"
        android:text="@string/run"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        tools:layout_editor_absoluteY="507dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/compile"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        tools:layout_editor_absoluteY="507dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="193dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="129dp"
        android:layout_height="28dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="13dp"
        android:text="@string/warrior_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="129dp"
        android:layout_height="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/warrior_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="528dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="245dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="395dp"
        android:layout_height="452dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="800"
        android:rowCount="800"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </GridLayout>
</android.support.constraint.ConstraintLayout>
